--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,13 @@ jobs:
       fail-fast: false
       matrix:
         ruby:
+          - "2.7"
+          - "3.0"
           - "3.1"
           - "3.2"
           - "3.3"
+          - "3.4"
+          - head
     steps:
       - uses: actions/checkout@v4
       - uses: ruby/setup-ruby@v1
@@ -32,7 +36,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.3"
+          ruby-version: "3.4"
           bundler-cache: true
       - name: Run RuboCop
         run: bundle exec rubocop
